--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;600;700&display=swap');
 @import "tailwindcss";
 
+@theme {
+  --font-cabin: "Cabin", "Noto Sans JP", "Hiragino Kaku Gothic ProN", "Hiragino Sans", "Yu Gothic", "Meiryo", system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
 :root {
-  font-family: "Cabin", system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Cabin", "Noto Sans JP", "Hiragino Kaku Gothic ProN", "Hiragino Sans", "Yu Gothic", "Meiryo", system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -15,6 +19,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-feature-settings: "kern" 1;
+  font-kerning: normal;
 }
 
 a {
@@ -73,4 +79,31 @@ button:focus-visible {
 .bg-90 {
   border-radius: 50px;
   border: 1px solid #fff;
+}
+
+/* Ensure font-weight works correctly with Japanese fonts */
+.font-cabin,
+[class*="font-cabin"] {
+  font-family: var(--font-cabin);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  font-feature-settings: "kern" 1;
+}
+
+/* Ensure font-weight classes work with Japanese text */
+.font-cabin.font-semibold {
+  font-weight: 600;
+}
+
+.font-cabin.font-bold {
+  font-weight: 700;
+}
+
+.font-cabin.font-medium {
+  font-weight: 500;
+}
+
+.font-cabin.font-normal {
+  font-weight: 400;
 }
